--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,22 +1,2 @@
-<div id="home" class="row">
-  <div class="large-6 large-offset-3">
-    <h2>Welcome to the {{ title }} page!</h2>
-
-    <div class="alert-box">{{ message }}</div>
-
-    <ul class="small-block-grid-2">
-      <li>
-        <img class="th" src="img/demo1.jpg" shows-message-when-hovered message="Im the first house.">
-      </li>
-      <li>
-        <img class="th" src="img/demo2.jpg" shows-message-when-hovered message="Im the second house.">
-      </li>
-    </ul>
-
-    <div class="row">
-      <div class="large-12 columns">
-        <button ng-click="logout()" class="button large expand radius">Log Out</button>
-      </div>
-    </div>
-  </div>
-</div>
+<h1>Welcome to JukeTube</h1>
+<p>Create a room or host a room and play music using the host computer</p>
