code cleanup and added state tracking for control buttons

--- a/app/templates/upcoming.html
+++ b/app/templates/upcoming.html
@@ -3,8 +3,10 @@
       <p id="current">{{ youtube.videoTitle }}</p>
       <ol id="upcoming" data-ng-show="playlist">
         <li data-ng-repeat="video in upcoming">
-          <div class="move-wrap"><span class="item-move" data-ng-click="move('up')">&#x25B2;</span>
-          <span class="item-move" data-ng-click="move('down')">&#x25BC;</span></div>
+          <!-- <div class="move-wrap"> -->
+          <p class="item-move" data-ng-click="move('up')">&#x25B2;</p>
+          <p class="item-move" data-ng-click="move('down')">&#x25BC;</p>
+        <!-- </div> -->
           <p class="item-delete" data-ng-click="delete(upcoming, video.id)">delete</p>
           <p class="item-title" data-ng-click="launch(video.id, video.title)">{{video.title}}</p>
 
