--- a/app/css/mobile.css
+++ b/app/css/mobile.css
@@ -302,9 +302,14 @@ a:hover {
     /*margin-top: 16px;*/
     /*margin-bottom: 16px;*/
 }
-#playlist li .move-wrap span{
-    padding:0px 5px;
+#playlist li p.item-move{
+    padding:10px 5px;
     color: white;
+    float:left;
+}
+#playlist li p.item-move:hover {
+    background-color:white;
+    color:black;
 }
 #history li{ color: #33522d;}
 .item-title{ margin-right: 80px;
