--- a/app/css/mobile.css
+++ b/app/css/mobile.css
@@ -229,7 +229,7 @@ a:hover {
     }
 
 .mobile-footer small {
-    line-height: 30px;
+    line-height: 50px;
     }
 
 .search-results h2 {
@@ -276,9 +276,9 @@ a:hover {
 
 
 .playerControls .main{
-    width: 75px;
+    width: 100px;
     height: 12px;
-    margin: 9px 5px 9px 0px;
+    margin: 10px 5px 10px 0px;
     float: left;
 }
 .playerControls .main div {
@@ -286,19 +286,15 @@ a:hover {
     cursor:pointer;
 }
 .playerControls .next, .playerControls .previous {
-    height: 10px;
-    width: 15px;
-    margin: 1px 0;
+    margin: 0;
 }
 .playerControls .pause, .playerControls .play {
-    width: 8px;
-    height: 12px;
-    margin: 0 15px;
+    margin: 0 25px 0 10px;
 }
-.playerControls .next {background: rgba(0, 0, 0, 0) url(../img/player-next.png) no-repeat center center scroll;}
+/*.playerControls .next {background: rgba(0, 0, 0, 0) url(../img/player-next.png) no-repeat center center scroll;}
 .playerControls .previous {background: rgba(0, 0, 0, 0) url(../img/player-previous.png) no-repeat center center scroll;}
 .playerControls .pause {background: rgba(0, 0, 0, 0) url(../img/player-pause.png) no-repeat center center scroll;}
-.playerControls .play {background: rgba(0, 0, 0, 0) url(../img/player-play.png) no-repeat center center scroll;}
+.playerControls .play {background: rgba(0, 0, 0, 0) url(../img/player-play.png) no-repeat center center scroll;}*/
 #playlist {
     background: #22242a;
     color: #727785;
@@ -363,4 +359,39 @@ text-overflow: ellipsis;}
     -moz-transition: top 0.5s ease-out,opacity 0.5s ease-out 4s;
     -o-transition: top 0.5s ease-out,opacity 0.5s ease-out 4s;
     transition: top 0.5s ease-out,opacity 0.5s ease-out 4s;
+}
+@font-face {
+    font-family: 'icomoon';
+    src:url('../webfonts/icomoon.eot');
+    src:url('../webfonts/icomoon.eot?#iefix') format('embedded-opentype'),
+        url('../webfonts/icomoon.ttf') format('truetype'),
+        url('../webfonts/icomoon.woff') format('woff'),
+        url('../webfonts/icomoon.svg#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class*="icon-"] {
+    font-family: 'icomoon';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    font-size:34px;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-forward:before {
+    content: "\e600";
+}
+.icon-pause:before {
+    content: "\e601";
+}
+.icon-play:before {
+    content: "\e602";
 }
